[metadata]
name = target-python-sdk
description = Adobe Target Python SDK
url = https://github.com/adobe/target-python-sdk
license_files = LICENSE.txt

[options]
python_requires = >=2.7, >=3.6
packages = find:

[options.packages.find]
exclude =
    *tests*
    samples*

[bdist_wheel]
universal=1

[bumpversion]
current_version = 0.0.0
commit = True
tag = True
[bumpversion:file:setup.cfg]
search = target_python_sdk=={current_version}
replace = target_python_sdk=={new_version}

