[metadata]
name = target-python-sdk
version = 1.0.0
description = Adobe Target Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adobe/target-python-sdk
license_files = LICENSE.txt

[options]
python_requires = >=2.7, >=3.6
packages = find:

[options.packages.find]
exclude =
    *tests*
    samples*

[bdist_wheel]
universal=1
